--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
 
 
     </script>
+     <!-- Eruda is console for mobile browsers -->
+     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+     <script>eruda.init();</script>
 </body>
 </html>
