--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1>Welcome to the Telegram Mini App</h1>
     <div id="user-id">User ID will be displayed here.</div>
     <button id="console-button">Open Console/DevTools</button>
-
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         // Ensure the Telegram Web App SDK is available
         window.Telegram.WebApp.ready();
