check result of send transaction

--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
                         amount: "20000000" 
                     }
                 ]
+            };
+
+            try {
+                const result = await tonConnectUI.sendTransaction(transaction);
+                // you can use signed boc to find the transaction 
+                const someTxData = await myAppExplorerService.getTransaction(result.boc);
+                alert('Transaction was sent successfully', someTxData);
+            } catch (e) {
+                console.error(e);
             }
-
-            const result = await tonConnectUI.sendTransaction(transaction)
-
         }
     </script>
     
