--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
             height: 100%;
             overflow: hidden;
         }
-        #ad-banner {
+        #exchangeBanner {
             width: 320px;
             height: 50px;
             margin: 0 auto;
