exchangeBanner background color fixed

--- a/game.html
+++ b/game.html
@@ -11,12 +11,13 @@
             padding: 0;
             height: 100%;
             overflow: hidden;
+            background-color: #0a1929; /* Dark blue color for the entire page */
         }
         #exchangeBanner {
             width: 320px;
             height: 50px;
             margin: 0 auto;
-            background-color: #f0f0f0;
+            background-color: #0a1929;
             display: flex;
             justify-content: center;
             align-items: center;
