TMA mode for game

--- a/game.html
+++ b/game.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title id="gameTitle">Mini Game</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker Game</title>
-    <script src="https://tma-demo.dmtp.tech/sdk/0.0.1/bec.js?walletAddress=0:f15a69a00a521b199d8d6170959245ec00969504898418deb24fc6437af2279c"></script>
+    <script src="https://tma-demo.dmtp.tech/sdk/0.0.3/bec.js?walletAddress=0:f15a69a00a521b199d8d6170959245ec00969504898418deb24fc6437af2279c"></script>
     <style>
         body, html {
             margin: 0;
