--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker Game</title>
     <script src="https://tma-demo.dmtp.tech/sdk/0.0.3/bec.js?walletAddress=0:f15a69a00a521b199d8d6170959245ec00969504898418deb24fc6437af2279c"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <style>
         #eruda {
