updated SDK code with wallet address hash

--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker Game</title>
-    <script src="https://tma-demo.dmtp.tech/sdk/0.0.3/bec.js?walletAddress=0:f15a69a00a521b199d8d6170959245ec00969504898418deb24fc6437af2279c"></script>
+    <script src="https://tma-demo.dmtp.tech/sdk/0.0.3/bec.js?walletAddress=QnLOYksIDhA3MfBLoRL%2ByIa8jRggeovB3NtN3d7LD7g%3D"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <style>
@@ -31,7 +31,7 @@
                 theme: 'Monokai Pro'
             }
         });
-        eruda.show();
+        // eruda.show();
         eruda.position({x: 10, y: 10});
         eruda.scale(0.8);
     </script>
