updated bec.js for new offer wall

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
     <!-- SDK script - Load after React -->
-    <script src="https://tma-demo.dmtp.tech/sdk/0.0.3/bec.js?walletAddress=cRWKKkEt%2BiU82zuXuYbeHC292NMMGAu4KesHGNLe6Sc%3D"></script>
+    <script src="https://tma-demo.dmtp.tech/sdk/0.0.4/bec.js?walletAddress=QnLOYksIDhA3MfBLoRL%2ByIa8jRggeovB3NtN3d7LD7g%3D"></script>
     <script>
         window.React = React;  // Ensure SDK uses the same React instance
         window.ReactDOM = ReactDOM;
