--- a/game.html
+++ b/game.html
@@ -5,15 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker Game</title>
-    <!-- React and ReactDOM CDN - Load these first -->
     <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <!-- SDK script - Load after React -->
-    <script src="https://tma-demo.dmtp.tech/sdk/0.0.4/bec.js?walletAddress=QnLOYksIDhA3MfBLoRL%2ByIa8jRggeovB3NtN3d7LD7g%3D"></script>
-    <script>
-        window.React = React;  // Ensure SDK uses the same React instance
-        window.ReactDOM = ReactDOM;
-    </script>
+
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <style>
@@ -74,7 +68,7 @@
     <!-- Babel for JSX transformation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     
-    <!-- Your game script - Load last -->
+    <!-- Game script - Load last -->
     <script type="text/babel" src="game.js"></script>
     
 </body>
