test: impression without show banner

--- a/game.html
+++ b/game.html
@@ -46,7 +46,7 @@
             overflow: hidden;
             background-color: #0a1929; /* Dark blue color for the entire page */
         }
-        #exchangeBanner {
+        #NOexchangeBanner {
             width: 320px;
             height: 115px;
             margin: 0 auto;
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <div id="exchangeBanner">Ad Banner Placeholder</div>
+    <div id="NOexchangeBanner">No Ad Banner Placeholder</div>
     <div id="game-container"></div>
    
     <!-- Babel for JSX transformation -->
