debug: offer wall not shown

--- a/game.html
+++ b/game.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <div id="NOexchangeBanner">No Ad Banner Placeholder</div>
+    <div id="exchangeBanner">Ad Banner Placeholder</div>
     <div id="game-container"></div>
    
     <!-- Babel for JSX transformation -->
