--- a/game.html
+++ b/game.html
@@ -46,7 +46,7 @@
             overflow: hidden;
             background-color: #0a1929; /* Dark blue color for the entire page */
         }
-        #NOexchangeBanner {
+        #exchangeBanner {
             width: 320px;
             height: 115px;
             margin: 0 auto;
