feat: offer wall and rewards demo

--- a/reward.html
+++ b/reward.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Apps Network SDK Demo</h1>
     <div id="exchangeBanner"></div>
-    <button id="openOfferWallButton">Open Offer Wall</button>
+    <button id="openOfferWallButton">Complete Task to earn 10 Catfish</button>
     <div id="reward-info"></div>
 
     <script>
