--- a/reward.html
+++ b/reward.html
@@ -9,7 +9,7 @@
     <script src="https://bec.dmtp.tech/0.0.6/bec.js?walletAddress=QnLOYksIDhA3MfBLoRL%2ByIa8jRggeovB3NtN3d7LD7g%3D"></script>
 </head>
 <body>
-    <h1>Apps Network SDK Demo</h1>
+    <h1>Apps Network SDK Demo</h1> <!-- use this file URL for the Telegram bot mini app URL -->
     <div id="exchangeBanner"></div>
     <button id="openOfferWallButton">Complete Task to earn 10 Catfish</button>
     <div id="reward-info"></div>
@@ -21,13 +21,20 @@
         }
 
         async function checkRewards() {
-            const tui = getTelegramUserId();
+            var tui = getTelegramUserId();
             if (!tui) return;
+            walletAddress = 'QnLOYksIDhA3MfBLoRL%2ByIa8jRggeovB3NtN3d7LD7g%3D'
 
-            const response = await fetch(`https://click.dmtp.tech/banners/events?tui=${tui}`);
+            const response = await fetch(`https://click.dmtp.tech/banners/events?wa=${walletAddress}`);
             const data = await response.json();
+            console.log(data)
 
-            const clickCount = data.items?.filter(item => item.action === "CLICK").length || 0;
+            // Filter the events to only include "CLICK" actions by the current user:
+                // 1. item.action === "CLICK": Only include events with "CLICK" action
+                // 2. item.tui === tui: Match the event's Telegram User ID with the current user's ID
+                // 3. || []: Fallback to an empty array if data.items is null/undefined or no items pass the filter
+            const userClicks = data.items?.filter(item => item.action === "CLICK" && item.tui === tui) || [];
+            const clickCount = userClicks.length;
             const rewardPoints = clickCount * 100;
 
             document.getElementById('reward-info').textContent = 
