--- a/reward.html
+++ b/reward.html
@@ -22,12 +22,11 @@
 
         async function checkRewards() {
             var tui = getTelegramUserId();
-            if (!tui) return;
             walletAddress = 'QnLOYksIDhA3MfBLoRL%2ByIa8jRggeovB3NtN3d7LD7g%3D'
 
             const response = await fetch(`https://click.dmtp.tech/banners/events?wa=${walletAddress}`);
             const data = await response.json();
-            console.log(data)
+            console.log(data);
 
             // Filter the events to only include "CLICK" actions by the current user:
                 // 1. item.action === "CLICK": Only include events with "CLICK" action
