--- a/game.html
+++ b/game.html
@@ -50,11 +50,25 @@
             position: relative;
         }
     </style>
+<script type="text/javascript">
+    var microadCompass = microadCompass || {};
+    microadCompass.queue = microadCompass.queue || [];
+  </script>
+  <script type="text/javascript" charset="UTF-8" src="//j.microad.net/js/compass.js" onload="new microadCompass.AdInitializer().initialize();" async></script>
+  
 </head>
 <body>
     <div id="exchangeBanner"></div>
     <div id="game-container"></div>
-   
+
+    <div id="68fb12a7455d8b8a85c5a9b03dc12ab9" >
+        <script type="text/javascript">
+          microadCompass.queue.push({
+            "spot": "68fb12a7455d8b8a85c5a9b03dc12ab9"
+          });
+        </script>
+      </div>
+
     <!-- Babel for JSX transformation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     
