feat: add tganalytics tag and settings

--- a/game.html
+++ b/game.html
@@ -55,6 +55,22 @@
         microadCompass.queue = microadCompass.queue || [];
   </script>
   <script type="text/javascript" charset="UTF-8" src="//j.microad.net/js/compass.js" onload="new microadCompass.AdInitializer().initialize();" async></script>  
+  <!-- Add Telegram Analytics script to HTML head -->
+    <script
+        async 
+        src="https://unpkg.com/@telegram-apps/analytics@latest/dist/index.js"
+        onload="initAnalytics()"  
+        type="text/javascript">
+    </script>
+     <script>
+        function initAnalytics() {
+          window.telegramAnalytics.init({
+    token: 'eyJhcHBfbmFtZSI6ImNsaWNrZXJfZ2FtZV9kZW1vIiwiYXBwX3VybCI6Imh0dHBzOi8vdC5tZS9UTUFfV2ViQXBwVXNlcl9QT0NfMV9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9zbGEtc2hpLmdpdGh1Yi5pby90bWFfZGVtby9nYW1lLmh0bWw/Z2FtZT1kZWVwU2VhQ2xpY2tlciZlbnY9ZGV2In0=!Y8V1iNGCasLLI2HOJ6iUqEQ7xXXHOKSNXoLFWVNSN4s=',
+            appName: 'clicker_game_demo',
+          });
+        }
+    </script>
+
 </head>
 <body>
     <div id="exchangeBanner"></div>
@@ -67,6 +83,8 @@
           });
         </script>
       </div>
+
+   
 
     <!-- Babel for JSX transformation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
