--- a/game.html
+++ b/game.html
@@ -70,6 +70,19 @@
           });
         }
     </script>
+<!-- telemetree integration -->
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="https://s3.eu-central-1.amazonaws.com/cdn.telemetree.io/telemetree-pixel.js"></script>
+<script>
+    const telemetreeBuilder = telemetree({
+        projectId: "ef3c2b38-11f4-40db-bb70-cc5767293638",
+        apiKey: "5f616c8b-5973-4b6e-b689-5cd513d02d13",
+        isTelegramContext: true, // use false, if a website is not in Telegram Web App context
+        logLevel: 'info', // set log level to debug if you need to. Default is info. (options: error, warn, info, debug)
+        trackGroup: "medium" // set group to low if you need to. Default is medium. (options: "high", "medium", "low", false)
+    });
+</script>
+
 
 </head>
 <body>
